handle localized default style names, fdo#61339

We need to map localized style names during import and export from and
to ODF. The default styles are the only localized style names and are
not imported with the name written into the file.

Change-Id: Ibdc2f750b7a4b7ce6994b22248e237fe95ac638d